--- a/src/views/login/verify.ejs
+++ b/src/views/login/verify.ejs
@@ -1,6 +1,6 @@
 <%- include('../components/header.ejs') %>
 
-<link rel="stylesheet" href="/css/toastify.css">
+<link rel="stylesheet" href="/css/utils/toastify.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 
 <body>
@@ -43,7 +43,7 @@
 
 </body>
 
-<script src='/js/resendCode.js' type="module"></script>
+<script src='/js/store/clients/resendCode.js' type="module"></script>
 <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="https://unpkg.com/feather-icons"></script>
 
