--- a/public/css/store/comparison.css
+++ b/public/css/store/comparison.css
@@ -105,50 +105,14 @@
     background-color: #111827;
 }
 
-.vs-separator-large-comparison {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 16px;
+.search-result-item .product-price {
+  font-weight: bold;
+  color: #D10024;
 }
 
-.vs-separator-large-comparison span {
-    font-size: 1.875rem;
-    font-weight: 800;
-    color: #6b7280;
-    background-color: #e5e7eb;
-    border-radius: 9999px;
-    width: 64px;
-    height: 64px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.06);
-}
-
-.vs-separator-small-comparison {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-top: 16px;
-    padding-bottom: 16px;
-    position: relative;
-}
-
-.vs-separator-small-comparison hr {
-    border-top: 2px solid #d1d5db;
-    width: 100%;
-    max-width: 320px;
-}
-
-.vs-separator-small-comparison span {
-    position: absolute;
-    background-color: #f3f4f6;
-    font-size: 1.25rem;
-    font-weight: 700;
-    color: #6b7280;
-    padding: 0 12px;
-    margin-top: -1px;
+.product-old-price{
+  color: #8D99AE;
+  font-weight: normal;
 }
 
 @media (min-width: 640px) {
