--- a/src/views/store/orders/showOrders.ejs
+++ b/src/views/store/orders/showOrders.ejs
@@ -34,8 +34,8 @@
                         </div>
                         <p class="mb-1-user">
                             <span class="strong-details">Total:</span> $<%= Number(order.total).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, "," ) %>
-                            <span class="badge-user <%= order.status === 'pagado' ? 'bg-success-user' : 'bg-warning-user' %> ms-2">
-                                <%= order.status %>
+                            <span class="badge-user <%= order.estado === 'pagado' ? 'bg-success-user' : 'bg-warning-user' %> ms-2">
+                                <%= order.estado %>
                             </span>
                         </p>
                         <small class="text-muted-user">
