--- a/src/views/store/clients/product.ejs
+++ b/src/views/store/clients/product.ejs
@@ -132,7 +132,7 @@
 
 				<% if (producto.esMovil) { %>
 				<li><a href="#" class="add-to-compare" data-id="<%= producto.id %>">
-					<i class="fa-solid fa-arrow-right-arrow-left"></i>Comparalo</a></li>
+					<i class="fa-solid fa-arrow-right-arrow-left"></i>Comparar</a></li>
 				<% } %>
 				</ul>
 
