Ciudad envio arreglado

--- a/src/views/store/orders/orderDetails.ejs
+++ b/src/views/store/orders/orderDetails.ejs
@@ -23,7 +23,7 @@
                         <p class="Information-details">
                             <strong>Nombre:</strong> <%= order.nombre %> <%= order.apellido %><br>
                             <strong>Direccion:</strong> <%= order.direccion %><br>
-                            <strong>Ciudad de envío:</strong> <%= order.ciudad_envio %><br>
+                            <strong>Ciudad de envío:</strong> <%= order.nombre_ciudad_envio %><br>
                             <strong>Distrito:</strong> <%= order.distrito %><br>
                             <strong>Teléfono:</strong> <%= order.telefono %> <br>
                             <strong>Email:</strong> <%= order.email %>
