--- a/src/views/store/orders/order.ejs
+++ b/src/views/store/orders/order.ejs
@@ -53,10 +53,10 @@
 							<div class="error-text" data-error-for="address"></div>
 						</div>
 						<div class="form-group">
-							<select class="input" id="city-select" name="ciudad_envio">
+							<select class="input" id="city-select" name="ciudad_envio_id">
 								<option value="">Selecciona una ciudad</option>
 							</select>
-							<div class="error-text" data-error-for="ciudad_envio"></div>
+							<div class="error-text" data-error-for="ciudad_envio_id"></div>
 						</div>
 						<div class="form-group">
 							<input class="input" type="text" name="district" placeholder="Distrito">
@@ -102,10 +102,10 @@
 									<div class="error-text" data-error-for="alt-address"></div>
 								</div>
 								<div class="form-group">
-									<select class="input" id="alt-city-select" name="alt-ciudad_envio">
+									<select class="input" id="alt-city-select" name="alt-ciudad_envio_id">
 										<option value="">Selecciona una ciudad</option>
 									</select>
-									<div class="error-text" data-error-for="alt-ciudad_envio"></div>
+									<div class="error-text" data-error-for="alt-ciudad_envio_id"></div>
 								</div>
 								<div class="form-group">
 									<input class="input" type="text" name="alt-district" placeholder="Distrito">
