--- a/src/views/admin/orderDetails.ejs
+++ b/src/views/admin/orderDetails.ejs
@@ -16,7 +16,11 @@
 
     <div class="container-details">
 
-        <h2 class="tittle2">Detalles del Pedido #<%= order.id %></h2>
+    <div class="header-top-details">
+        <img src="/img/lavegatech-logo.png" alt="">
+        <h2 class="tittle2">Detalles del Pedido #<%= order.id %>
+        </h2>
+    </div>
 
         <div class="card-details mb-4">
             <div class="card-header-details">
