Cambos de estado e historial de datos

--- a/src/views/admin/orders.ejs
+++ b/src/views/admin/orders.ejs
@@ -51,7 +51,7 @@
                             </span>
                         </p>
                         <small class="text-muted-user">
-                            <%= order.direccion %>, <%= order.ciudad %>
+                            <%= order.direccion %>, <%= order.ciudad_envio_nombre %>
                         </small>
                     </a>
                 <% }); %>
