--- a/src/views/admin/shipping.ejs
+++ b/src/views/admin/shipping.ejs
@@ -5,6 +5,8 @@
 <link rel="stylesheet" href="/css/utils/sweetAlertAdmin.css">
 <link rel="stylesheet" href="/css/admin/table.css">
 <link rel="stylesheet" href="/css/utils/error.css">
+<link rel="stylesheet" href="/css/utils/state.css">
+
 
 <div class="main-content">
     <header class="header">
@@ -29,9 +31,10 @@
                 <table class="product-table">
                     <thead>
                         <tr>
-                            <th style="width: 30%;">ID</th>
-                            <th style="width: 30%;">Nombre</th>
-                            <th style="width: 30%;">Costo de Envío</th>
+                            <th style="width: 15%;">ID</th>
+                            <th style="width: 20%;">Nombre</th>
+                            <th style="width: 20%;">Costo de Envío</th>
+                            <th style="width: 20%;">Estado</th>
                             <th style="width: 10%;">Acciones</th>
                         </tr>
                     </thead>
