--- a/src/views/admin/orderDetails.ejs
+++ b/src/views/admin/orderDetails.ejs
@@ -34,7 +34,7 @@
                         <p class="Information-details">
                             <strong>Nombre:</strong> <%= order.nombre %> <%= order.apellido %><br>
                             <strong>Direccion:</strong> <%= order.direccion %><br>
-                            <strong>Ciudad de envío:</strong> <%= order.ciudad_envio %><br>
+                            <strong>Ciudad de envío:</strong> <%= order.ciudad_envio_nombre %><br>
                             <strong>Distrito:</strong> <%= order.distrito %><br>
                             <strong>Teléfono:</strong> <%= order.telefono %> <br>
                             <strong>Email:</strong> <%= order.email %>
@@ -107,7 +107,7 @@
                     </tr>
                     <tr>
                         <th colspan="6" style="text-align: right; font-size: 1.2em;">Envío</th>
-                        <th style="font-size: 1.2em;">$<%= Number(order.costo_envio || 0).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></th>
+                        <th style="font-size: 1.2em;">$<%= Number(order.ciudad_envio_costo || 0).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></th>
                     </tr>
                     <tr>
                         <th colspan="6" style="text-align: right; font-size: 1.2em;">Total</th>
