--- a/src/views/store/orders/showOrders.ejs
+++ b/src/views/store/orders/showOrders.ejs
@@ -39,7 +39,7 @@
                             </span>
                         </p>
                         <small class="text-muted-user">
-                            <%= order.direccion %>, <%= order.nombre_ciudad %>
+                            <%= order.direccion %>, <%= order.ciudad_envio_nombre %>
                         </small>
                     </a>
                 <% }); %>
