Unificando funciones en graficos

--- a/src/views/admin/allProducts.ejs
+++ b/src/views/admin/allProducts.ejs
@@ -16,7 +16,7 @@
     <main class="main-content-area">
         <div class="card">
             <div class="card-header">
-                <h3>Lista de productos</h3>
+                <h3>Lista de Productos</h3>
                 <div class="search-container">
                     <input type="text" id="searchTopProductos" placeholder="Buscar productos..." class="input-search" />
                     <i class="fa fa-search search-icon"></i>
