--- a/src/views/admin/sales.ejs
+++ b/src/views/admin/sales.ejs
@@ -67,7 +67,7 @@
     
     </div>
 
-  <script src="/js/admin/store/chart.js"></script>
+  <script type="module" src="/js/admin/store/chart.js"></script>
   <script src="/js/utils/formatPrice.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
