Optimizando grafico y niveles de carpetas

--- a/src/views/admin/sales.ejs
+++ b/src/views/admin/sales.ejs
@@ -59,14 +59,9 @@
         </table>
       </div>
     </div>
+  </div>
 
-    <div class="filtro-tipo">
-      <button id="btnVerTodos">Ver todos</button>
-    </div>
-    
-    </div>
-
-  <script type="module" src="/js/admin/store/chart.js"></script>
+  <script type="module" src="/js/admin/charts/chart.js"></script>
   <script src="/js/utils/formatPrice.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
