--- a/src/views/admin/users.ejs
+++ b/src/views/admin/users.ejs
@@ -36,4 +36,4 @@
             </div>
         </main>
 
-        <script src="/js/admin/store/users.js"></script>
+        <script src="/js/admin/accounts/users.js"></script>
