--- a/src/views/store/clients/product.ejs
+++ b/src/views/store/clients/product.ejs
@@ -460,8 +460,8 @@
 	</body>
 	
 	<script src="/js/utils/buttonComparison.js"></script>
-	<script src="/js/store/clients/stockColor.js"></script>
-	<script src="/js/store/clients/rating.js" type="module"></script>
+	<script src="/js/store/stockColor.js"></script>
+	<script src="/js/store/rating.js" type="module"></script>
 	<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 	<script src="https://unpkg.com/feather-icons"></script>
 
