--- a/src/views/admin/allProducts.ejs
+++ b/src/views/admin/allProducts.ejs
@@ -45,4 +45,5 @@ document.getElementById('btnVolver').addEventListener('click', () => {
 });
 </script>
 
-<script src="/js/admin/store/productsInOrders.js"></script>
+<script src="/js/admin/charts/topProducts.js"></script>
+<script src="/js/utils/formatPrice.js"></script>
