--- a/src/views/admin/orders.ejs
+++ b/src/views/admin/orders.ejs
@@ -61,6 +61,6 @@
   </main>
 </div>
 
-<script type="module" src="/js/admin/store/orders.js"></script>
+<script type="module" src="/js/admin/orders/orders.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="https://unpkg.com/feather-icons"></script>
