--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -140,10 +140,10 @@
         <script src="/js/store/libs/slick.min.js"></script>
         <script src="/js/store/libs/nouislider.min.js"></script>
         <script src="/js/store/libs/main.js" type="module"></script>
-        <script src="/js/store/clients/search.js"></script>
-        <script src="/js/cart/cart.js" type="module"></script>
-        <script src="/js/cart/cartPreview.js" type="module"></script>
-        <script src="/js/fav/fav.js" type="module"></script>
+        <script src="/js/store/search.js"></script>
+        <script src="/js/store/cart/cart.js" type="module"></script>
+        <script src="/js/store/cart/cartPreview.js" type="module"></script>
+        <script src="/js/store/fav/fav.js" type="module"></script>
         <script src="/js/utils/formatPrice.js"></script>
 
 </body>
