--- a/src/views/store/clients/cart.ejs
+++ b/src/views/store/clients/cart.ejs
@@ -113,7 +113,7 @@
 
     <%- include('../../partials/footer.ejs') %>
 
-    <script src="/js/cart/cartView.js" type="module"></script>
+    <script src="/js/store/cart/cartView.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </body>
