--- a/src/views/store/clients/comparison.ejs
+++ b/src/views/store/clients/comparison.ejs
@@ -46,7 +46,7 @@
 
 </body>
 
-    <script src="/js/store/clients/comparison.js" type="module"></script>
+    <script src="/js/store/comparison.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 	  <script src="https://unpkg.com/feather-icons"></script>
 
