--- a/src/views/store/clients/fav.ejs
+++ b/src/views/store/clients/fav.ejs
@@ -94,7 +94,7 @@
     <%- include('../../partials/footer.ejs') %>
     
 </body>
-    <script src="/js/fav/favView.js" type="module"></script>
+    <script src="/js/store/fav/favView.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 	<script src="https://unpkg.com/feather-icons"></script>
