--- a/src/views/store/cart.ejs
+++ b/src/views/store/cart.ejs
@@ -1,4 +1,4 @@
-<%- include('../../partials/header.ejs') %>
+<%- include('../partials/header.ejs') %>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -111,7 +111,7 @@
 </div>
 <% } %>
 
-    <%- include('../../partials/footer.ejs') %>
+    <%- include('../partials/footer.ejs') %>
 
     <script src="/js/store/cart/cartView.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
