--- a/src/views/store/login/forgotPass/email.ejs
+++ b/src/views/store/login/forgotPass/email.ejs
@@ -1,4 +1,4 @@
-<%- include('../../components/header.ejs') %>
+<%- include('../../../components/header.ejs') %>
 
 <body>
   <div class="email-container">
@@ -23,4 +23,4 @@
   </div>
 </body>
 
-<%- include('../../components/footer.ejs') %>
+<%- include('../../../components/footer.ejs') %>
