--- a/src/views/store/login/login.ejs
+++ b/src/views/store/login/login.ejs
@@ -1,4 +1,4 @@
-<%- include('../components/header.ejs') %>
+<%- include('../../components/header.ejs') %>
 
 <body>
 
@@ -48,4 +48,4 @@
 
 </body>
 
-<%- include('../components/footer.ejs') %>
+<%- include('../../components/footer.ejs') %>
