--- a/src/views/store/product.ejs
+++ b/src/views/store/product.ejs
@@ -1,4 +1,4 @@
-<%- include('../../partials/header.ejs') %>	
+<%- include('../partials/header.ejs') %>	
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 <link rel="stylesheet" href="/css/utils/toastify.css">
@@ -455,7 +455,7 @@
 	</div>
 	<!-- /Section -->
 
-	<%- include('../../partials/footer.ejs') %>
+	<%- include('../partials/footer.ejs') %>
 
 	</body>
 	
