--- a/src/views/store/account.ejs
+++ b/src/views/store/account.ejs
@@ -1,4 +1,4 @@
-<%- include('../../partials/header.ejs') %>
+<%- include('../partials/header.ejs') %>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="/css/utils/toastify.css">
@@ -55,9 +55,9 @@
       </div>
     </body>
 
-      <script src="/js/store/clients/userProfile.js" type="module"></script>
+      <script src="/js/store/accounts/userProfile.js" type="module"></script>
       <script src="/js/utils/showPass.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
       <script src="https://unpkg.com/feather-icons"></script>
 
-  <%- include('../../partials/footer.ejs') %>
+  <%- include('../partials/footer.ejs') %>
