--- a/src/views/store/comparison.ejs
+++ b/src/views/store/comparison.ejs
@@ -1,4 +1,4 @@
-<%- include('../../partials/header.ejs') %>
+<%- include('../partials/header.ejs') %>
 
 
 <head>
@@ -42,7 +42,7 @@
     </div>
   </div>
 
-    <%- include('../../partials/footer.ejs') %>
+    <%- include('../partials/footer.ejs') %>
 
 </body>
 
