--- a/src/views/store/login/forgotPass/newpass.ejs
+++ b/src/views/store/login/forgotPass/newpass.ejs
@@ -1,4 +1,4 @@
-<%- include('../../components/header.ejs') %>
+<%- include('../../../components/header.ejs') %>
 
 <body>
   <div class="login-container">
@@ -47,4 +47,4 @@
   </div>
 </body>
 
-<%- include('../../components/footer.ejs') %>
+<%- include('../../../components/footer.ejs') %>
