--- a/src/views/store/login/register.ejs
+++ b/src/views/store/login/register.ejs
@@ -1,4 +1,4 @@
-<%- include('../components/header.ejs') %>
+<%- include('../../components/header.ejs') %>
 
 <body>
 
@@ -67,4 +67,4 @@
   </div>
 </div>  
 
-<%- include('../components/footer.ejs') %>
+<%- include('../../components/footer.ejs') %>
