--- a/src/views/store/login/verify.ejs
+++ b/src/views/store/login/verify.ejs
@@ -1,4 +1,4 @@
-<%- include('../components/header.ejs') %>
+<%- include('../../components/header.ejs') %>
 
 <link rel="stylesheet" href="/css/utils/toastify.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
@@ -43,8 +43,8 @@
 
 </body>
 
-<script src='/js/store/clients/resendCode.js' type="module"></script>
+<script src='/js/store/accounts/resendCode.js' type="module"></script>
 <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="https://unpkg.com/feather-icons"></script>
 
-<%- include('../components/footer.ejs') %>
+<%- include('../../components/footer.ejs') %>
