--- a/src/views/store/orders/order.ejs
+++ b/src/views/store/orders/order.ejs
@@ -180,7 +180,7 @@
 
 	</body>
 	
-    <script src="/js/store/clients/order.js" type="module"></script>    
+    <script src="/js/store/order.js" type="module"></script>    
     <script src="https://www.paypal.com/sdk/js?client-id=Adxx8fzjTmAkgRKTLil8ciSgRYaYZxTnJf96IAsdJVAvE8-fW3Rx2hbrDZ5VC662O1So9fgvFOPZd5IG&currency=USD"></script>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 	<script src="https://unpkg.com/feather-icons"></script>
