--- a/src/views/store/store.ejs
+++ b/src/views/store/store.ejs
@@ -1,4 +1,4 @@
-<%- include('../../partials/header.ejs') %>
+<%- include('../partials/header.ejs') %>
 
   <link rel="stylesheet" href="/css/utils/toastify.css">
 
@@ -294,7 +294,7 @@
 										</div>
 										<!-- /SECTION -->
 
-	<%- include('../../partials/footer.ejs') %>
+	<%- include('../partials/footer.ejs') %>
 
 	</body>
 	
