--- a/src/views/admin/sales.ejs
+++ b/src/views/admin/sales.ejs
@@ -40,28 +40,36 @@
       <button id="btnProductos">Top productos</button>
     </div>
 
-    <div id="resumenVentas" class="resumen-ventas"></div>
+    <button id="btnDescargarPDF" class="no-in-pdf" disabled>
+      Descargar PDF
+    </button>
 
-    <canvas id="ventasChart"></canvas>
+    <div class="container-report-pdf">
 
-    <div id="tablaReporte" class="table-container" style="margin-top:18px;">
-      <div class="table-header">
-        <h4 id="tablaTitulo" style="margin:0;">Reporte</h4>
-      </div>
-      <div class="table-responsive">
-        <table id="reporteTable" class="report-table">
-          <thead>
-          </thead>
-          <tbody>
-          </tbody>
-          <tfoot>
-          </tfoot>
-        </table>
+      <div id="resumenVentas" class="resumen-ventas"></div>
+
+      <canvas id="ventasChart"></canvas>
+
+      <div id="tablaReporte" class="table-container" style="margin-top:18px;">
+        <div class="table-header">
+          <h4 id="tablaTitulo" style="margin:0;"></h4>
+        </div>
+        <div class="table-responsive">
+          <table id="reporteTable" class="report-table">
+            <thead>
+            </thead>
+            <tbody>
+            </tbody>
+            <tfoot>
+            </tfoot>
+          </table>
+        </div>
       </div>
     </div>
-  </div>
 
   <script type="module" src="/js/admin/charts/chart.js"></script>
   <script src="/js/utils/formatPrice.js"></script>
+  <script src="/js/utils/PDF.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
